# FightClubGameCmake

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanProfileDebug  conanfile.txt  linuxDebug  linuxRelease
.github/workflows/: clang-format-check.yml  linux-build.yml  linux-test_runner.yml  windows-build.yml
Automation/: automation.py
Automation/CMAKE/: CMakeHelpers.cmake
ConanProfile/: WindowsDebug  WindowsRelease
Source/ChuckNorrisJokes/: CMakeLists.txt  main.cpp
Source/DoodleJumpGame/: CMakeLists.txt  DoodleJump.cpp  DoodleJump.h  PlatformManager.cpp  PlatformManager.h  Player.cpp  Player.h  Types.h  main.cpp  pch.h
Source/DoodleJumpGame/Tests/: main.cpp
Source/FightClubGame/: CMakeLists.txt  main.cpp
Source/FightClubGame/Game/: Character.cpp  Character.h  Weapon.cpp  Weapon.h
Source/FightClubGame/Tests/: main.cpp
Source/Game/: Character.h
Source/RaylibTest/: CMakeLists.txt
Source/Tests/: main.cpp
Source/Utils/: CMakeLists.txt  Math.cpp  Math.h
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FightClubGame.sln  FightClubGame.vcxproj  FightClubGame.vcxproj.filters  FightClubGameLib.vcxproj  FightClubGameLib.vcxproj.filters  FightClubGameTestRunner.vcxproj  FightClubGameTestRunner.vcxproj.filters  MathLib.vcxproj  MathLib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
